# BlockDiagrams

./: .gitignore  404.html  README.md  blockdiag.py  blockdiagrams.py  diag_examples.ipynb  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  requirements.txt  setup.py
Examples/: diag_examples.ipynb
blockdiagrams/: ComplexPlane.py  DiagramBuilder.py  SignalPlotter.py  __init__.py
docs/: index.md  reference.md  requirements.txt
docs/notebooks/: complex_plane_examples.ipynb  diag_examples.ipynb  discrete_signal_examples.ipynb  feedback_examples.ipynb  signal.ipynb  signal2.ipynb  signal_examples.ipynb
notebooks/: complex_plane_examples.ipynb  diag_examples.ipynb  feedback_examples.ipynb  signal_examples.ipynb
reference/: index.html
search/: search_index.json
signalblocks/: BaseSignalPlotter.py  ComplexPlane.py  ContinuousSignalPlotter.py  DiagramBuilder.py  DiscreteSignalPlotter.py  DiscreteSignalPlotter_auto.py  DiscreteSignalPlotter_old.py  SignalPlotter.py  __init__.py
tests/: conftest.py  diag_examples.ipynb  test_compare_continous.py  test_compare_convolution_cotinuous.py  test_compare_delta_continuous.py  test_compare_discrete.py
