[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SignalBlocks"
version = "2.0.0"
description = "A complete symbolic and graphical framework for block diagrams, signals transformations and plotting, and Z-transform ROC visualization."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3.0-or-later" }

authors = [
    { name = "Miguel Á. Martín-Fernández", email = "migmar@uva.es" }
]

dependencies = [
    "matplotlib>=3.5",
    "numpy<1.25",
    "scipy>=1.7",
    "sympy>=1.10"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/miguelmartfern/SignalBlocks"
Documentation = "https://miguelmartfern.github.io/SignalBlocks"
Source = "https://github.com/miguelmartfern/SignalBlocks"
Issues = "https://github.com/miguelmartfern/SignalBlocks/issues"
